--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -3,7 +3,7 @@
     <app-sidebar [menuItems]="menuItems"></app-sidebar>
   </aside>
   <main class="main-panel">
-    <!-- <app-navbar></app-navbar> -->
+    <app-navbar></app-navbar>
     <router-outlet></router-outlet>
     <!-- <app-footer></app-footer> -->
   </main>
