--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <main class="main-panel">
+    <router-outlet></router-outlet>
+  </main>
+</div>
